hphp/hack/test/typecheck/refinements/null.php.exp
File "null.php", line 7, characters 27-28:
Invalid argument (Typing[4110])
File "null.php", line 15, characters 30-33:
Expected ?int
File "null.php", line 5, characters 15-16:
But got <expr#1>
File "null.php", line 7, characters 27-28:
  where '<expr#1>' is a reference to this expression
